# cmake-demo

./: .gitignore  CMakeLists.txt  README.md
hello/: CMakeLists.txt  hello.cxx  hello.h
src/: CMakeLists.txt  main.cxx
